--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -33,6 +33,14 @@ By default, the underlying Cloud Foundry client used by the Terraform Cloud Foun
 
 If you're not familiar with Terraform yet, see the [Fundamentals](https://developer.hashicorp.com/terraform/tutorials/cli) section with a lot of helpful tutorials. 
 
+## Migration Guide
+
+The newer v3 APIs have brought several changes to  many of the resources created. Some are even deprecated and replaced by 
+different resources.
+
+Please refer to the [migration guide](https://github.com/cloudfoundry/terraform-provider-cloudfoundry/tree/main/migration-guide) to help transitioning from the existing [community CF provider](https://github.com/cloudfoundry-community/terraform-provider-cloudfoundry) to the [current CF provider](https://github.com/cloudfoundry/terraform-provider-cloudfoundry). The migration guide 
+highlights the differences and maps to the equivalent resources/datasources as well.
+
 ## Best Practices
 
 For the best experience using the {{.RenderedProviderName}} provider, we recommend applying the common best practices for Terraform adoption as described in the Hashicorp documentation. For example, see [Phases of Terraform Adoption](https://developer.hashicorp.com/well-architected-framework/operational-excellence/operational-excellence-terraform-maturity).
